Add locale support

--- a/javascripts/discourse/templates/components/search-banner.hbs
+++ b/javascripts/discourse/templates/components/search-banner.hbs
@@ -1,7 +1,7 @@
 {{#if shouldDisplay}}
   <div class="custom-search-banner" >
     <div class="wrap custom-search-banner-wrap">
-      <h1><a href="{{"search_banner.headline_link}}">{{theme-i18n "search_banner.headline"}}</a></h1>
+      <h1><a href="{{theme-i18n "search_banner.headline_link}}">{{theme-i18n "search_banner.headline"}}</a></h1>
       <p>{{theme-i18n "search_banner.subhead"}}</p>
       {{mount-widget widget="search-widget"}}
     </div>
